<resources>
    <string name="app_name">Mars Images</string>

    <string name="hint_mars_rover">Mars Rover:</string>
    <string name="hint_mars_sun">Sun</string>

    <string name="earth_date">Earth Date:</string>
    <string name="lbl_cam">Cam:</string>
    <string name="lbl_rover">Rover:</string>
    <string name="lbl_launch_date">Launch Date:</string>
    <string name="lbl_landing_date">Landing Date:</string>
    <string name="lbl_Sun">Sun</string>
    <string name="lbl_count_sun">Sun</string>

    <string name="title_main">Martian Images</string>

    <string name="btn_search">Search</string>

    <string name="desc_image">Martian Picture</string>

    <string name="lbl_curiosity">Curiosity</string>
    <string name="lbl_opportunity">Opportunity</string>
    <string name="lbl_spirit">Spirit</string>
    <string name="lbl_websites">Nasa Websites</string>

    <string name="text_open_web">Select an option to see more official Mars images from NASA</string>
    <string name="description_nasa_logo">Nasa Logo</string>
    <string name="start_value_sun">0</string>

    <string name="no_address_found">Endereço não disponível</string>
    <string name="service_not_available">Serviço Indisponível</string>
    <string name="invalid_lat_long_used">Coordenadas Inválidas</string>
    <string name="google_map_key">AIzaSyBij5Qv7i24N7loQIP-I24l2jvTLNQJt0c</string>

    <string name="default_place_search">Observatório Astronômico</string>
    <string name="default_place_radius">50000</string>

    <string name="map_marker_you_are_here">YOU ARE HERE</string>
    <string name="default_sun">0</string>
    <string name="download_image_button">Download image button</string>
    <string name="favorite_image_button">Favorite image button</string>
    <string-array name="rovers">
        <item>Curiosity</item>
        <item>Opportunity</item>
        <item>Spirit</item>
    </string-array>

    <string name="file_favorite_images">file_favorite_images</string>
    <string name="hint_radius">Radius</string>
    <string name="lbl_my_images">My Images</string>
    <string name="desc_dark_mode_icon">Dark Mode Icon</string>
    <string name="btn_search_places">Search Places</string>
    <string name="btn_last_searches">Last Searches</string>
    <string name="btn_delete_all">Delete All</string>
</resources>